removed deprecated javax.xml.bind, bumped aws-iot-device-sdk-java to 1.3.9